Project SocialNetwork {
  database_type: 'SQLite'
  Note: 'Database schema for a Facebook-like social network (v1.3.0)'
}

Table users {
  id uuid [pk]
  email varchar [unique, not null]
  password_hash varchar [not null]
  first_name varchar [not null]
  last_name varchar [not null]
  dob date [not null]
  avatar varchar
  nickname varchar
  about_me text
  is_public boolean [default: true]

  // Counter Caches for rapid UI rendering
  follower_count integer [default: 0]
  following_count integer [default: 0]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: 'Core user entity, now includes counter caches for social stats.'
}

Table sessions {
  id uuid [pk]
  user_id uuid
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: sessions.user_id > users.id [delete: cascade]

Table followers {
  follower_id uuid
  followee_id uuid
  status varchar [not null, note: '"pending" or "accepted"']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (follower_id, followee_id) [pk]
  }
}

Ref: followers.follower_id > users.id [delete: cascade]
Ref: followers.followee_id > users.id [delete: cascade]

Table posts {
  id uuid [pk]
  user_id uuid [null, note: 'Set to NULL only after the author account is deleted and the post is soft-deleted']
  group_id uuid [ref: > groups.id, null]
  content text [note: 'Required unless image_url is present for active posts; cleared on soft deletion']
  image_url varchar
  privacy varchar [not null, note: '"public" - all users, "almost_private" - only followers, "private" - only selected followers. Enforced in migration SQL with CHECK(privacy IN (\'public\', \'almost_private\', \'private\')).']

  // Counter Caches
  comment_count integer [default: 0, note: 'Cached count of active top-level comments; replies and deleted comments are excluded']
  like_count integer [default: 0]
  dislike_count integer [default: 0]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [null, note: 'Set when the author edits the post. NULL means never edited.']
  deleted_at timestamp [null, note: 'Soft-delete marker. Deleted posts are returned using the minimal DeletedPost tombstone.']

  indexes {
    (created_at)
    (user_id, created_at)
    (group_id, created_at)
  }

  Note: 'Soft-deleted rows retain privacy, group, and audience data for authorization, but API tombstones expose only id and deleted. Account deletion soft-deletes authored posts before ON DELETE SET NULL removes the author reference.'
}

Ref: posts.user_id > users.id [delete: set null]

Table post_audiences {
  post_id uuid [ref: > posts.id]
  user_id uuid

  indexes {
    (post_id, user_id) [pk]
    (user_id)
  }
}

Ref: post_audiences.user_id > users.id [delete: cascade]

Table post_votes {
  post_id uuid [ref: > posts.id]
  user_id uuid
  vote varchar [not null, note: 'Allowed values: "like", "dislike"; enforce with CHECK']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [null, note: 'Set when the user changes between like and dislike.']

  indexes {
    (post_id, user_id) [pk]
    (user_id)
  }

  Note: 'One row per user and post guarantees mutually exclusive like/dislike voting. Deleting the row removes the vote.'
}

Ref: post_votes.user_id > users.id [delete: cascade]

Table comments {
  id uuid [pk]
  post_id uuid [ref: > posts.id, not null]
  user_id uuid [null, note: 'Set to NULL only after the author account is deleted and the comment is soft-deleted']
  parent_comment_id uuid [ref: > comments.id, null, note: 'Self-reference without ON DELETE CASCADE; soft-deleted parents retain replies']
  content text [note: 'Required unless image_url is present for active comments; cleared on soft deletion']
  image_url varchar

  // Counter Caches
  like_count integer [default: 0]
  dislike_count integer [default: 0]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamp [null, note: 'Soft-delete marker. When set, clients render a deleted-content placeholder while preserving replies.']
  updated_at timestamp [null, note: 'Set when the author edits the comment. NULL means never edited.']

  indexes {
    (post_id, created_at) [name: 'idx_comments_post_created', note: 'Supports ordered comment-thread reads for a post']
    (parent_comment_id, created_at) [name: 'idx_comments_parent_created', note: 'Supports ordered parent-to-children tree assembly']
    (user_id, created_at) [name: 'idx_comments_user_created', note: 'Supports user activity queries']
  }

  Note: 'Soft-deleted comments serialize as id/deleted/replies tombstones and remain in the thread. Account deletion soft-deletes authored comments before ON DELETE SET NULL removes the author reference.'
}

Ref: comments.user_id > users.id [delete: set null]

Table comment_votes {
  comment_id uuid [ref: > comments.id]
  user_id uuid
  vote varchar [not null, note: '"like" or "dislike". Enforced in migration SQL with CHECK(vote IN (\'like\', \'dislike\')).']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [null, note: 'Set when the user changes between like and dislike.']

  indexes {
    (comment_id, user_id) [pk]
    (user_id)
  }

  Note: 'One row per user and comment guarantees mutually exclusive like/dislike voting. Deleting the row removes the vote.'
}

Ref: comment_votes.user_id > users.id [delete: cascade]

Table groups {
  id uuid [pk]
  creator_id uuid [null, note: 'Set to NULL when the creator deletes their account; the group remains active']
  title varchar [not null]
  description text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: groups.creator_id > users.id [delete: set null]

Table group_members {
  group_id uuid [ref: > groups.id]
  user_id uuid
  status varchar [not null, note: '"pending_invite", "pending_request", "accepted"']

  indexes {
    (group_id, user_id) [pk]
  }
}

Ref: group_members.user_id > users.id [delete: cascade]

Table events {
  id uuid [pk]
  group_id uuid [ref: > groups.id, not null]
  creator_id uuid [null, note: 'Set to NULL when the creator deletes their account; the event remains active']
  title varchar [not null]
  description text
  event_date timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: events.creator_id > users.id [delete: set null]

Table event_rsvps {
  event_id uuid [ref: > events.id]
  user_id uuid
  status varchar [not null, note: '"going", "not_going", "pending_invite"']

  indexes {
    (event_id, user_id) [pk]
  }
}

Ref: event_rsvps.user_id > users.id [delete: cascade]

Table dm_threads {
  id uuid [pk]
  user1_id uuid
  user2_id uuid
  last_message_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user1_id, user2_id) [unique]
  }

  Note: 'Creates a distinct "Chat Room" entity for direct messages. Makes querying the /chats list incredibly fast.'
}

Ref: dm_threads.user1_id > users.id [delete: cascade]
Ref: dm_threads.user2_id > users.id [delete: cascade]

Table messages {
  id uuid [pk]
  sender_id uuid [not null]
  dm_thread_id uuid [null, note: 'Used if this is a DM']
  group_id uuid [ref: > groups.id, null, note: 'Used if this is a group chat']
  content text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: 'Consolidated table for both DM and Group messages.'
}

Ref: messages.sender_id > users.id [delete: cascade]
Ref: messages.dm_thread_id > dm_threads.id [delete: cascade]

Table notifications {
  id uuid [pk]
  user_id uuid
  type varchar [not null, note: '"follow_request", "group_invite", "event_invite", "group_request", "event_created"']
  source_id uuid [not null]
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: notifications.user_id > users.id [delete: cascade]
